--- a/src/tkenv/Makefile.in
+++ b/src/tkenv/Makefile.in
@@ -83,8 +83,8 @@ missing-library:
 	@ echo '  *** No Tk installation found -- skipping Tkenv'
 
 depend:
-	makedepend -Y -I. -I../envir -I../sim -- *.cc
-	makedepend -Y -I. -I../envir -I../sim -fMakefile.in -- *.cc
+	makedepend -Y -I. -I../envir -I../../include -- *.cc
+	makedepend -Y -I. -I../envir -I../../include -fMakefile.in -- *.cc
 
 clean:
 	rm -f *.o tclcode.cc libtkenv$(A_LIB_SUFFIX) libtkenv$(SO_LIB_SUFFIX)
@@ -92,58 +92,58 @@ clean:
 # DO NOT DELETE THIS LINE -- make depend depends on it.
 
 arrow.o: arrow.h
-inspect.o: ../sim/omnetpp.h ../sim/defs.h ../sim/util.h ../sim/errmsg.h
-inspect.o: ../sim/cobject.h ../sim/csimul.h ../sim/chead.h ../sim/cmsgheap.h
-inspect.o: ../sim/coutvect.h ../sim/ccor.h ../sim/macros.h ../sim/ctypes.h
-inspect.o: ../sim/carray.h ../sim/cqueue.h ../sim/cllist.h ../sim/cwatch.h
-inspect.o: ../sim/cpar.h ../sim/cgate.h ../sim/cmessage.h ../sim/cpacket.h
-inspect.o: ../sim/cstk.h ../sim/cmodule.h ../sim/cstat.h ../sim/cdensity.h
-inspect.o: ../sim/chist.h ../sim/cvarhist.h ../sim/cpsquare.h
-inspect.o: ../sim/cksplit.h ../sim/cdetect.h ../sim/ctopo.h ../sim/cnetmod.h
-inspect.o: ../sim/cfsm.h ../sim/protocol.h ../sim/cenvir.h tkapp.h
+inspect.o: ../../include/omnetpp.h ../../include/defs.h ../../include/util.h ../../include/errmsg.h
+inspect.o: ../../include/cobject.h ../../include/csimul.h ../../include/chead.h ../../include/cmsgheap.h
+inspect.o: ../../include/coutvect.h ../../include/ccor.h ../../include/macros.h ../../include/ctypes.h
+inspect.o: ../../include/carray.h ../../include/cqueue.h ../../include/cllist.h ../../include/cwatch.h
+inspect.o: ../../include/cpar.h ../../include/cgate.h ../../include/cmessage.h ../../include/cpacket.h
+inspect.o: ../../include/cstk.h ../../include/cmodule.h ../../include/cstat.h ../../include/cdensity.h
+inspect.o: ../../include/chist.h ../../include/cvarhist.h ../../include/cpsquare.h
+inspect.o: ../../include/cksplit.h ../../include/cdetect.h ../../include/ctopo.h ../../include/cnetmod.h
+inspect.o: ../../include/cfsm.h ../../include/protocol.h ../../include/cenvir.h tkapp.h
 inspect.o: ../envir/omnetapp.h ../envir/args.h ../envir/envdefs.h tklib.h
 inspect.o: tkinsp.h
-modinsp.o: ../sim/cmodule.h ../sim/cobject.h ../sim/defs.h ../sim/util.h
-modinsp.o: ../sim/ccor.h ../sim/chead.h ../sim/carray.h ../sim/cqueue.h
-modinsp.o: ../sim/cgate.h ../sim/csimul.h ../sim/errmsg.h ../sim/cmsgheap.h
-modinsp.o: ../sim/coutvect.h ../sim/cmessage.h ../sim/cpar.h ../sim/cnetmod.h
-modinsp.o: ../sim/cstat.h ../sim/cdensity.h tkapp.h ../envir/omnetapp.h
-modinsp.o: ../sim/cenvir.h ../envir/args.h ../envir/envdefs.h tklib.h
+modinsp.o: ../../include/cmodule.h ../../include/cobject.h ../../include/defs.h ../../include/util.h
+modinsp.o: ../../include/ccor.h ../../include/chead.h ../../include/carray.h ../../include/cqueue.h
+modinsp.o: ../../include/cgate.h ../../include/csimul.h ../../include/errmsg.h ../../include/cmsgheap.h
+modinsp.o: ../../include/coutvect.h ../../include/cmessage.h ../../include/cpar.h ../../include/cnetmod.h
+modinsp.o: ../../include/cstat.h ../../include/cdensity.h tkapp.h ../envir/omnetapp.h
+modinsp.o: ../../include/cenvir.h ../envir/args.h ../envir/envdefs.h tklib.h
 modinsp.o: tkinsp.h arrow.h
-objinsp.o: ../sim/omnetpp.h ../sim/defs.h ../sim/util.h ../sim/errmsg.h
-objinsp.o: ../sim/cobject.h ../sim/csimul.h ../sim/chead.h ../sim/cmsgheap.h
-objinsp.o: ../sim/coutvect.h ../sim/ccor.h ../sim/macros.h ../sim/ctypes.h
-objinsp.o: ../sim/carray.h ../sim/cqueue.h ../sim/cllist.h ../sim/cwatch.h
-objinsp.o: ../sim/cpar.h ../sim/cgate.h ../sim/cmessage.h ../sim/cpacket.h
-objinsp.o: ../sim/cstk.h ../sim/cmodule.h ../sim/cstat.h ../sim/cdensity.h
-objinsp.o: ../sim/chist.h ../sim/cvarhist.h ../sim/cpsquare.h
-objinsp.o: ../sim/cksplit.h ../sim/cdetect.h ../sim/ctopo.h ../sim/cnetmod.h
-objinsp.o: ../sim/cfsm.h ../sim/protocol.h ../sim/cenvir.h tkapp.h
+objinsp.o: ../../include/omnetpp.h ../../include/defs.h ../../include/util.h ../../include/errmsg.h
+objinsp.o: ../../include/cobject.h ../../include/csimul.h ../../include/chead.h ../../include/cmsgheap.h
+objinsp.o: ../../include/coutvect.h ../../include/ccor.h ../../include/macros.h ../../include/ctypes.h
+objinsp.o: ../../include/carray.h ../../include/cqueue.h ../../include/cllist.h ../../include/cwatch.h
+objinsp.o: ../../include/cpar.h ../../include/cgate.h ../../include/cmessage.h ../../include/cpacket.h
+objinsp.o: ../../include/cstk.h ../../include/cmodule.h ../../include/cstat.h ../../include/cdensity.h
+objinsp.o: ../../include/chist.h ../../include/cvarhist.h ../../include/cpsquare.h
+objinsp.o: ../../include/cksplit.h ../../include/cdetect.h ../../include/ctopo.h ../../include/cnetmod.h
+objinsp.o: ../../include/cfsm.h ../../include/protocol.h ../../include/cenvir.h tkapp.h
 objinsp.o: ../envir/omnetapp.h ../envir/args.h ../envir/envdefs.h tklib.h
 objinsp.o: tkinsp.h arrow.h
-statinsp.o: ../sim/cmodule.h ../sim/cobject.h ../sim/defs.h ../sim/util.h
-statinsp.o: ../sim/ccor.h ../sim/chead.h ../sim/carray.h ../sim/cqueue.h
-statinsp.o: ../sim/cgate.h ../sim/csimul.h ../sim/errmsg.h ../sim/cmsgheap.h
-statinsp.o: ../sim/coutvect.h ../sim/cmessage.h ../sim/cpar.h
-statinsp.o: ../sim/cnetmod.h ../sim/cstat.h ../sim/cdensity.h tkapp.h
-statinsp.o: ../envir/omnetapp.h ../sim/cenvir.h ../envir/args.h
+statinsp.o: ../../include/cmodule.h ../../include/cobject.h ../../include/defs.h ../../include/util.h
+statinsp.o: ../../include/ccor.h ../../include/chead.h ../../include/carray.h ../../include/cqueue.h
+statinsp.o: ../../include/cgate.h ../../include/csimul.h ../../include/errmsg.h ../../include/cmsgheap.h
+statinsp.o: ../../include/coutvect.h ../../include/cmessage.h ../../include/cpar.h
+statinsp.o: ../../include/cnetmod.h ../../include/cstat.h ../../include/cdensity.h tkapp.h
+statinsp.o: ../envir/omnetapp.h ../../include/cenvir.h ../envir/args.h
 statinsp.o: ../envir/envdefs.h tklib.h tkinsp.h arrow.h
-tkapp.o: ../envir/appreg.h ../sim/chead.h ../sim/cobject.h ../sim/defs.h
-tkapp.o: ../sim/util.h ../envir/cinifile.h ../envir/envdefs.h ../sim/cenvir.h
-tkapp.o: ../sim/cmodule.h ../sim/ccor.h ../sim/carray.h ../sim/cqueue.h
-tkapp.o: ../sim/cgate.h ../sim/csimul.h ../sim/errmsg.h ../sim/cmsgheap.h
-tkapp.o: ../sim/coutvect.h ../sim/cmessage.h ../sim/cpar.h ../sim/cstk.h
-tkapp.o: ../sim/ctypes.h ../sim/cnetmod.h tkdefs.h tkapp.h
+tkapp.o: ../envir/appreg.h ../../include/chead.h ../../include/cobject.h ../../include/defs.h
+tkapp.o: ../../include/util.h ../envir/cinifile.h ../envir/envdefs.h ../../include/cenvir.h
+tkapp.o: ../../include/cmodule.h ../../include/ccor.h ../../include/carray.h ../../include/cqueue.h
+tkapp.o: ../../include/cgate.h ../../include/csimul.h ../../include/errmsg.h ../../include/cmsgheap.h
+tkapp.o: ../../include/coutvect.h ../../include/cmessage.h ../../include/cpar.h ../../include/cstk.h
+tkapp.o: ../../include/ctypes.h ../../include/cnetmod.h tkdefs.h tkapp.h
 tkapp.o: ../envir/omnetapp.h ../envir/args.h tklib.h tkinsp.h
-tkcmd.o: ../sim/cenvir.h ../sim/defs.h ../sim/carray.h ../sim/cobject.h
-tkcmd.o: ../sim/util.h ../sim/csimul.h ../sim/errmsg.h ../sim/chead.h
-tkcmd.o: ../sim/cmsgheap.h ../sim/coutvect.h ../sim/ccor.h ../sim/cmodule.h
-tkcmd.o: ../sim/cqueue.h ../sim/cgate.h ../sim/ctypes.h tkapp.h
+tkcmd.o: ../../include/cenvir.h ../../include/defs.h ../../include/carray.h ../../include/cobject.h
+tkcmd.o: ../../include/util.h ../../include/csimul.h ../../include/errmsg.h ../../include/chead.h
+tkcmd.o: ../../include/cmsgheap.h ../../include/coutvect.h ../../include/ccor.h ../../include/cmodule.h
+tkcmd.o: ../../include/cqueue.h ../../include/cgate.h ../../include/ctypes.h tkapp.h
 tkcmd.o: ../envir/omnetapp.h ../envir/args.h ../envir/envdefs.h tklib.h
 tkcmd.o: tkinsp.h
-tklib.o: ../sim/cobject.h ../sim/defs.h ../sim/util.h ../sim/cmodule.h
-tklib.o: ../sim/ccor.h ../sim/chead.h ../sim/carray.h ../sim/cqueue.h
-tklib.o: ../sim/cgate.h ../sim/csimul.h ../sim/errmsg.h ../sim/cmsgheap.h
-tklib.o: ../sim/coutvect.h tklib.h tkinsp.h ../envir/omnetapp.h
-tklib.o: ../sim/cenvir.h ../envir/args.h ../envir/envdefs.h tkapp.h
+tklib.o: ../../include/cobject.h ../../include/defs.h ../../include/util.h ../../include/cmodule.h
+tklib.o: ../../include/ccor.h ../../include/chead.h ../../include/carray.h ../../include/cqueue.h
+tklib.o: ../../include/cgate.h ../../include/csimul.h ../../include/errmsg.h ../../include/cmsgheap.h
+tklib.o: ../../include/coutvect.h tklib.h tkinsp.h ../envir/omnetapp.h
+tklib.o: ../../include/cenvir.h ../envir/args.h ../envir/envdefs.h tkapp.h
 tklib.o: ../envir/patmatch.h
