--- a/src/cmdenv/Makefile.in
+++ b/src/cmdenv/Makefile.in
@@ -49,18 +49,18 @@ heap.o : heap.cc
 	$(CXX) -c $(COPTS) heap.cc
 
 depend:
-	makedepend -Y -I. -I../envir -I../sim -- *.cc
-	makedepend -Y -I. -I../envir -I../sim -fMakefile.in -- *.cc
+	makedepend -Y -I. -I../envir -I../../include -- *.cc
+	makedepend -Y -I. -I../envir -I../../include -fMakefile.in -- *.cc
 
 clean:
 	rm -f *.o libcmdenv$(A_LIB_SUFFIX) libcmdenv$(SO_LIB_SUFFIX)
 
 # DO NOT DELETE THIS LINE -- make depend depends on it.
 
-cmdenv.o: cmddefs.h ../sim/defs.h cmdenv.h ../sim/ctypes.h ../sim/chead.h
-cmdenv.o: ../sim/cobject.h ../sim/util.h ../sim/csimul.h ../sim/errmsg.h
-cmdenv.o: ../sim/cmsgheap.h ../sim/coutvect.h ../sim/ccor.h
-cmdenv.o: ../envir/omnetapp.h ../sim/carray.h ../sim/cenvir.h ../envir/args.h
+cmdenv.o: cmddefs.h ../../include/defs.h cmdenv.h ../../include/ctypes.h ../../include/chead.h
+cmdenv.o: ../../include/cobject.h ../../include/util.h ../../include/csimul.h ../../include/errmsg.h
+cmdenv.o: ../../include/cmsgheap.h ../../include/coutvect.h ../../include/ccor.h
+cmdenv.o: ../envir/omnetapp.h ../../include/carray.h ../../include/cenvir.h ../envir/args.h
 cmdenv.o: ../envir/envdefs.h enumstr.h ../envir/appreg.h ../envir/cinifile.h
-cmdenv.o: ../sim/cmodule.h ../sim/cqueue.h ../sim/cgate.h ../sim/cnetmod.h
+cmdenv.o: ../../include/cmodule.h ../../include/cqueue.h ../../include/cgate.h ../../include/cnetmod.h
 enumstr.o: enumstr.h
