--- a/src/cmdenv/Makefile.vc
+++ b/src/cmdenv/Makefile.vc
@@ -10,7 +10,7 @@ CFLAGS=$(CFLAGS) /DWIN32_DLL
 #
 # Local definitions
 #
-COPTS=$(CFLAGS) /I "$(OMNETPP_INCL_DIR)" /I "..\envir" /DBUILDING_CMDENV
+COPTS=$(CFLAGS) /I "$(OMNETPP_INCL_DIR)" /I "../envir" /DBUILDING_CMDENV
 OBJS = cmdenv.obj enumstr.obj heap.obj
 LIBS = $(OMNETPP_SRC_DIR)/sim/sim_std.ilib $(OMNETPP_SRC_DIR)/envir/envir.ilib
 
@@ -46,10 +46,10 @@ clean:
 
 # DO NOT DELETE THIS LINE -- make depend depends on it.
 
-cmdenv.obj: cmdenv.h $(OMNETPP_INCL_DIR)/ctypes.h $(OMNETPP_INCL_DIR)/chead.h $(OMNETPP_INCL_DIR)/cobject.h
-cmdenv.obj: $(OMNETPP_INCL_DIR)/defs.h $(OMNETPP_INCL_DIR)/util.h $(OMNETPP_INCL_DIR)/csimul.h $(OMNETPP_INCL_DIR)/errmsg.h
-cmdenv.obj: $(OMNETPP_INCL_DIR)/cmsgheap.h $(OMNETPP_INCL_DIR)/coutvect.h $(OMNETPP_INCL_DIR)/ccor.h
-cmdenv.obj: ..\envir\omnetapp.h $(OMNETPP_INCL_DIR)/carray.h $(OMNETPP_INCL_DIR)/cenvir.h enumstr.h
-cmdenv.obj: ..\envir\slaveapp.h ..\envir\cinifile.h $(OMNETPP_INCL_DIR)/cmodule.h
-cmdenv.obj: $(OMNETPP_INCL_DIR)/cqueue.h $(OMNETPP_INCL_DIR)/cgate.h $(OMNETPP_INCL_DIR)/cnetmod.h ..\envir\args.h
+cmdenv.obj: cmdenv.h ../../include/ctypes.h ../../include/chead.h ../../include/cobject.h
+cmdenv.obj: ../../include/defs.h ../../include/util.h ../../include/csimul.h ../../include/errmsg.h
+cmdenv.obj: ../../include/cmsgheap.h ../../include/coutvect.h ../../include/ccor.h
+cmdenv.obj: ../envir/omnetapp.h ../../include/carray.h ../../include/cenvir.h enumstr.h
+cmdenv.obj: ../envir/slaveapp.h ../envir/cinifile.h ../../include/cmodule.h
+cmdenv.obj: ../../include/cqueue.h ../../include/cgate.h ../../include/cnetmod.h ../envir/args.h
 enumstr.obj: enumstr.h
