--- a/src/tkenv/Makefile.vc
+++ b/src/tkenv/Makefile.vc
@@ -10,7 +10,7 @@ CFLAGS=$(CFLAGS) /DWIN32_DLL
 #
 # Local definitions
 #
-COPTS=$(CFLAGS) /I "$(OMNETPP_INCL_DIR)" /I "..\envir" $(TK_CFLAGS) /DBUILDING_TKENV
+COPTS=$(CFLAGS) /I "$(OMNETPP_INCL_DIR)" /I "../envir" $(TK_CFLAGS) /DBUILDING_TKENV
 OBJS = tkapp$(TKENV_EMBED_SUFFIX).obj tkcmd.obj tklib.obj objinsp.obj modinsp.obj statinsp.obj inspect.obj arrow.obj
 LIBS = $(OMNETPP_SRC_DIR)/sim/sim_std.ilib $(OMNETPP_SRC_DIR)/envir/envir.ilib $(TK_LIB_DIR)/tcl82.lib $(TK_LIB_DIR)/tk82.lib
 
@@ -73,52 +73,52 @@ clean:
 # DO NOT DELETE THIS LINE -- make depend depends on it.
 
 arrow.obj: arrow.h
-inspect.obj: $(OMNETPP_INCL_DIR)/omnetpp.h $(OMNETPP_INCL_DIR)/defs.h $(OMNETPP_INCL_DIR)/util.h $(OMNETPP_INCL_DIR)/errmsg.h
-inspect.obj: $(OMNETPP_INCL_DIR)/cobject.h $(OMNETPP_INCL_DIR)/csimul.h $(OMNETPP_INCL_DIR)/chead.h $(OMNETPP_INCL_DIR)/cmsgheap.h
-inspect.obj: $(OMNETPP_INCL_DIR)/coutvect.h $(OMNETPP_INCL_DIR)/ccor.h $(OMNETPP_INCL_DIR)/macros.h $(OMNETPP_INCL_DIR)/ctypes.h
-inspect.obj: $(OMNETPP_INCL_DIR)/carray.h $(OMNETPP_INCL_DIR)/cqueue.h $(OMNETPP_INCL_DIR)/cllist.h $(OMNETPP_INCL_DIR)/cwatch.h
-inspect.obj: $(OMNETPP_INCL_DIR)/cpar.h $(OMNETPP_INCL_DIR)/cgate.h $(OMNETPP_INCL_DIR)/cmessage.h $(OMNETPP_INCL_DIR)/cpacket.h
-inspect.obj: $(OMNETPP_INCL_DIR)/cstk.h $(OMNETPP_INCL_DIR)/cmodule.h $(OMNETPP_INCL_DIR)/cstat.h $(OMNETPP_INCL_DIR)/cdensity.h
-inspect.obj: $(OMNETPP_INCL_DIR)/chist.h $(OMNETPP_INCL_DIR)/cvarhist.h $(OMNETPP_INCL_DIR)/cpsquare.h
-inspect.obj: $(OMNETPP_INCL_DIR)/cksplit.h $(OMNETPP_INCL_DIR)/cdetect.h $(OMNETPP_INCL_DIR)/ctopo.h $(OMNETPP_INCL_DIR)/cnetmod.h
-inspect.obj: $(OMNETPP_INCL_DIR)/cfsm.h $(OMNETPP_INCL_DIR)/protocol.h $(OMNETPP_INCL_DIR)/cenvir.h tkapp.h
-inspect.obj: ..\envir\omnetapp.h tklib.h tkinsp.h
-modinsp.obj: $(OMNETPP_INCL_DIR)/cmodule.h $(OMNETPP_INCL_DIR)/cobject.h $(OMNETPP_INCL_DIR)/defs.h $(OMNETPP_INCL_DIR)/util.h
-modinsp.obj: $(OMNETPP_INCL_DIR)/ccor.h $(OMNETPP_INCL_DIR)/chead.h $(OMNETPP_INCL_DIR)/carray.h $(OMNETPP_INCL_DIR)/cqueue.h
-modinsp.obj: $(OMNETPP_INCL_DIR)/cgate.h $(OMNETPP_INCL_DIR)/csimul.h $(OMNETPP_INCL_DIR)/errmsg.h $(OMNETPP_INCL_DIR)/cmsgheap.h
-modinsp.obj: $(OMNETPP_INCL_DIR)/coutvect.h $(OMNETPP_INCL_DIR)/cmessage.h $(OMNETPP_INCL_DIR)/cpar.h $(OMNETPP_INCL_DIR)/cnetmod.h
-modinsp.obj: $(OMNETPP_INCL_DIR)/cstat.h $(OMNETPP_INCL_DIR)/cdensity.h tkapp.h ..\envir\omnetapp.h
-modinsp.obj: $(OMNETPP_INCL_DIR)/cenvir.h tklib.h tkinsp.h arrow.h
-objinsp.obj: $(OMNETPP_INCL_DIR)/omnetpp.h $(OMNETPP_INCL_DIR)/defs.h $(OMNETPP_INCL_DIR)/util.h $(OMNETPP_INCL_DIR)/errmsg.h
-objinsp.obj: $(OMNETPP_INCL_DIR)/cobject.h $(OMNETPP_INCL_DIR)/csimul.h $(OMNETPP_INCL_DIR)/chead.h $(OMNETPP_INCL_DIR)/cmsgheap.h
-objinsp.obj: $(OMNETPP_INCL_DIR)/coutvect.h $(OMNETPP_INCL_DIR)/ccor.h $(OMNETPP_INCL_DIR)/macros.h $(OMNETPP_INCL_DIR)/ctypes.h
-objinsp.obj: $(OMNETPP_INCL_DIR)/carray.h $(OMNETPP_INCL_DIR)/cqueue.h $(OMNETPP_INCL_DIR)/cllist.h $(OMNETPP_INCL_DIR)/cwatch.h
-objinsp.obj: $(OMNETPP_INCL_DIR)/cpar.h $(OMNETPP_INCL_DIR)/cgate.h $(OMNETPP_INCL_DIR)/cmessage.h $(OMNETPP_INCL_DIR)/cpacket.h
-objinsp.obj: $(OMNETPP_INCL_DIR)/cstk.h $(OMNETPP_INCL_DIR)/cmodule.h $(OMNETPP_INCL_DIR)/cstat.h $(OMNETPP_INCL_DIR)/cdensity.h
-objinsp.obj: $(OMNETPP_INCL_DIR)/chist.h $(OMNETPP_INCL_DIR)/cvarhist.h $(OMNETPP_INCL_DIR)/cpsquare.h
-objinsp.obj: $(OMNETPP_INCL_DIR)/cksplit.h $(OMNETPP_INCL_DIR)/cdetect.h $(OMNETPP_INCL_DIR)/ctopo.h $(OMNETPP_INCL_DIR)/cnetmod.h
-objinsp.obj: $(OMNETPP_INCL_DIR)/cfsm.h $(OMNETPP_INCL_DIR)/protocol.h $(OMNETPP_INCL_DIR)/cenvir.h tkapp.h
-objinsp.obj: ..\envir\omnetapp.h tklib.h tkinsp.h arrow.h
-statinsp.obj: $(OMNETPP_INCL_DIR)/cmodule.h $(OMNETPP_INCL_DIR)/cobject.h $(OMNETPP_INCL_DIR)/defs.h $(OMNETPP_INCL_DIR)/util.h
-statinsp.obj: $(OMNETPP_INCL_DIR)/ccor.h $(OMNETPP_INCL_DIR)/chead.h $(OMNETPP_INCL_DIR)/carray.h $(OMNETPP_INCL_DIR)/cqueue.h
-statinsp.obj: $(OMNETPP_INCL_DIR)/cgate.h $(OMNETPP_INCL_DIR)/csimul.h $(OMNETPP_INCL_DIR)/errmsg.h $(OMNETPP_INCL_DIR)/cmsgheap.h
-statinsp.obj: $(OMNETPP_INCL_DIR)/coutvect.h $(OMNETPP_INCL_DIR)/cmessage.h $(OMNETPP_INCL_DIR)/cpar.h
-statinsp.obj: $(OMNETPP_INCL_DIR)/cnetmod.h $(OMNETPP_INCL_DIR)/cstat.h $(OMNETPP_INCL_DIR)/cdensity.h tkapp.h
-statinsp.obj: ..\envir\omnetapp.h $(OMNETPP_INCL_DIR)/cenvir.h tklib.h tkinsp.h arrow.h
-tkapp.obj: ..\envir\slaveapp.h ..\envir\omnetapp.h $(OMNETPP_INCL_DIR)/carray.h
-tkapp.obj: $(OMNETPP_INCL_DIR)/cobject.h $(OMNETPP_INCL_DIR)/defs.h $(OMNETPP_INCL_DIR)/util.h $(OMNETPP_INCL_DIR)/cenvir.h
-tkapp.obj: ..\envir\cinifile.h $(OMNETPP_INCL_DIR)/cmodule.h $(OMNETPP_INCL_DIR)/ccor.h $(OMNETPP_INCL_DIR)/chead.h
-tkapp.obj: $(OMNETPP_INCL_DIR)/cqueue.h $(OMNETPP_INCL_DIR)/cgate.h $(OMNETPP_INCL_DIR)/csimul.h $(OMNETPP_INCL_DIR)/errmsg.h
-tkapp.obj: $(OMNETPP_INCL_DIR)/cmsgheap.h $(OMNETPP_INCL_DIR)/coutvect.h $(OMNETPP_INCL_DIR)/cmessage.h $(OMNETPP_INCL_DIR)/cpar.h
-tkapp.obj: $(OMNETPP_INCL_DIR)/cstk.h $(OMNETPP_INCL_DIR)/ctypes.h $(OMNETPP_INCL_DIR)/cnetmod.h tkapp.h tklib.h
+inspect.obj: ../../include/omnetpp.h ../../include/defs.h ../../include/util.h ../../include/errmsg.h
+inspect.obj: ../../include/cobject.h ../../include/csimul.h ../../include/chead.h ../../include/cmsgheap.h
+inspect.obj: ../../include/coutvect.h ../../include/ccor.h ../../include/macros.h ../../include/ctypes.h
+inspect.obj: ../../include/carray.h ../../include/cqueue.h ../../include/cllist.h ../../include/cwatch.h
+inspect.obj: ../../include/cpar.h ../../include/cgate.h ../../include/cmessage.h ../../include/cpacket.h
+inspect.obj: ../../include/cstk.h ../../include/cmodule.h ../../include/cstat.h ../../include/cdensity.h
+inspect.obj: ../../include/chist.h ../../include/cvarhist.h ../../include/cpsquare.h
+inspect.obj: ../../include/cksplit.h ../../include/cdetect.h ../../include/ctopo.h ../../include/cnetmod.h
+inspect.obj: ../../include/cfsm.h ../../include/protocol.h ../../include/cenvir.h tkapp.h
+inspect.obj: ../envir/omnetapp.h tklib.h tkinsp.h
+modinsp.obj: ../../include/cmodule.h ../../include/cobject.h ../../include/defs.h ../../include/util.h
+modinsp.obj: ../../include/ccor.h ../../include/chead.h ../../include/carray.h ../../include/cqueue.h
+modinsp.obj: ../../include/cgate.h ../../include/csimul.h ../../include/errmsg.h ../../include/cmsgheap.h
+modinsp.obj: ../../include/coutvect.h ../../include/cmessage.h ../../include/cpar.h ../../include/cnetmod.h
+modinsp.obj: ../../include/cstat.h ../../include/cdensity.h tkapp.h ../envir/omnetapp.h
+modinsp.obj: ../../include/cenvir.h tklib.h tkinsp.h arrow.h
+objinsp.obj: ../../include/omnetpp.h ../../include/defs.h ../../include/util.h ../../include/errmsg.h
+objinsp.obj: ../../include/cobject.h ../../include/csimul.h ../../include/chead.h ../../include/cmsgheap.h
+objinsp.obj: ../../include/coutvect.h ../../include/ccor.h ../../include/macros.h ../../include/ctypes.h
+objinsp.obj: ../../include/carray.h ../../include/cqueue.h ../../include/cllist.h ../../include/cwatch.h
+objinsp.obj: ../../include/cpar.h ../../include/cgate.h ../../include/cmessage.h ../../include/cpacket.h
+objinsp.obj: ../../include/cstk.h ../../include/cmodule.h ../../include/cstat.h ../../include/cdensity.h
+objinsp.obj: ../../include/chist.h ../../include/cvarhist.h ../../include/cpsquare.h
+objinsp.obj: ../../include/cksplit.h ../../include/cdetect.h ../../include/ctopo.h ../../include/cnetmod.h
+objinsp.obj: ../../include/cfsm.h ../../include/protocol.h ../../include/cenvir.h tkapp.h
+objinsp.obj: ../envir/omnetapp.h tklib.h tkinsp.h arrow.h
+statinsp.obj: ../../include/cmodule.h ../../include/cobject.h ../../include/defs.h ../../include/util.h
+statinsp.obj: ../../include/ccor.h ../../include/chead.h ../../include/carray.h ../../include/cqueue.h
+statinsp.obj: ../../include/cgate.h ../../include/csimul.h ../../include/errmsg.h ../../include/cmsgheap.h
+statinsp.obj: ../../include/coutvect.h ../../include/cmessage.h ../../include/cpar.h
+statinsp.obj: ../../include/cnetmod.h ../../include/cstat.h ../../include/cdensity.h tkapp.h
+statinsp.obj: ../envir/omnetapp.h ../../include/cenvir.h tklib.h tkinsp.h arrow.h
+tkapp.obj: ../envir/slaveapp.h ../envir/omnetapp.h ../../include/carray.h
+tkapp.obj: ../../include/cobject.h ../../include/defs.h ../../include/util.h ../../include/cenvir.h
+tkapp.obj: ../envir/cinifile.h ../../include/cmodule.h ../../include/ccor.h ../../include/chead.h
+tkapp.obj: ../../include/cqueue.h ../../include/cgate.h ../../include/csimul.h ../../include/errmsg.h
+tkapp.obj: ../../include/cmsgheap.h ../../include/coutvect.h ../../include/cmessage.h ../../include/cpar.h
+tkapp.obj: ../../include/cstk.h ../../include/ctypes.h ../../include/cnetmod.h tkapp.h tklib.h
 tkapp.obj: tkinsp.h
-tkcmd.obj: $(OMNETPP_INCL_DIR)/cenvir.h $(OMNETPP_INCL_DIR)/defs.h $(OMNETPP_INCL_DIR)/carray.h $(OMNETPP_INCL_DIR)/cobject.h
-tkcmd.obj: $(OMNETPP_INCL_DIR)/util.h $(OMNETPP_INCL_DIR)/csimul.h $(OMNETPP_INCL_DIR)/errmsg.h $(OMNETPP_INCL_DIR)/chead.h
-tkcmd.obj: $(OMNETPP_INCL_DIR)/cmsgheap.h $(OMNETPP_INCL_DIR)/coutvect.h $(OMNETPP_INCL_DIR)/ccor.h $(OMNETPP_INCL_DIR)/cmodule.h
-tkcmd.obj: $(OMNETPP_INCL_DIR)/cqueue.h $(OMNETPP_INCL_DIR)/cgate.h $(OMNETPP_INCL_DIR)/ctypes.h tkapp.h
-tkcmd.obj: ..\envir\omnetapp.h tklib.h tkinsp.h
-tklib.obj: $(OMNETPP_INCL_DIR)/cobject.h $(OMNETPP_INCL_DIR)/defs.h $(OMNETPP_INCL_DIR)/util.h $(OMNETPP_INCL_DIR)/cmodule.h
-tklib.obj: $(OMNETPP_INCL_DIR)/ccor.h $(OMNETPP_INCL_DIR)/chead.h $(OMNETPP_INCL_DIR)/carray.h $(OMNETPP_INCL_DIR)/cqueue.h
-tklib.obj: $(OMNETPP_INCL_DIR)/cgate.h $(OMNETPP_INCL_DIR)/csimul.h $(OMNETPP_INCL_DIR)/errmsg.h $(OMNETPP_INCL_DIR)/cmsgheap.h
-tklib.obj: $(OMNETPP_INCL_DIR)/coutvect.h tklib.h tkinsp.h ..\envir\omnetapp.h
-tklib.obj: $(OMNETPP_INCL_DIR)/cenvir.h tkapp.h
+tkcmd.obj: ../../include/cenvir.h ../../include/defs.h ../../include/carray.h ../../include/cobject.h
+tkcmd.obj: ../../include/util.h ../../include/csimul.h ../../include/errmsg.h ../../include/chead.h
+tkcmd.obj: ../../include/cmsgheap.h ../../include/coutvect.h ../../include/ccor.h ../../include/cmodule.h
+tkcmd.obj: ../../include/cqueue.h ../../include/cgate.h ../../include/ctypes.h tkapp.h
+tkcmd.obj: ../envir/omnetapp.h tklib.h tkinsp.h
+tklib.obj: ../../include/cobject.h ../../include/defs.h ../../include/util.h ../../include/cmodule.h
+tklib.obj: ../../include/ccor.h ../../include/chead.h ../../include/carray.h ../../include/cqueue.h
+tklib.obj: ../../include/cgate.h ../../include/csimul.h ../../include/errmsg.h ../../include/cmsgheap.h
+tklib.obj: ../../include/coutvect.h tklib.h tkinsp.h ../envir/omnetapp.h
+tklib.obj: ../../include/cenvir.h tkapp.h
